# WordsCounter

./: CMakeLists.txt  WordsCounter.cpp  WordsCounter.h  WordsCounter.kdev4  main.cpp  resource.qrc
share/translations/: WordsCounter_ru.ts
src/: WordsCounter.cpp  WordsCounter.h  fileparser.cpp  fileparser.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  wordscounter.cpp  wordscounter.h  wordscounter.ui
